--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico+xml" href="/vite.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>amazon_clone</amazon-clone></title>
+    <title>amazon_clone</title>
   </head>
   <body>
     <div id="root"></div>
